# tinyboards

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  SELF_HOSTING.md  backend.Dockerfile  build-and-push.sh  configure.sh  deploy.sh  diesel.toml  docker-compose.dev.yml  docker-compose.yml  docker_deploy.sh  frontend.Dockerfile  issue_template.yaml  schema.graphql  tinyboards.example.hjson
backend/crates/auth/: Cargo.toml
backend/crates/auth/src/: claims.rs  cookies.rs  errors.rs  handlers.rs  lib.rs  middleware.rs  password.rs  session.rs  tokens.rs  types.rs
backend/crates/auth/tests/: integration.rs
crates/ap_federation/: Cargo.toml
crates/ap_federation/src/: activity_queue.rs  http_signatures.rs
crates/ap_federation/src/axum/: inbox.rs  mod.rs
crates/ap_federation/src/fetch/: mod.rs  object_id.rs  webfinger.rs
crates/ap_federation/src/protocol/: helpers.rs
crates/api/: Cargo.toml
crates/api/src/: comments.rs  context.rs  data.rs  error.rs  lib.rs  local_only.rs  newtypes.rs  post.rs  submissions.rs  submit.rs  users.rs  utils.rs
crates/api/src/admin/: add_admin.rs  admin_handle_application.rs  admin_purge_board.rs  admin_purge_comment.rs  admin_purge_person.rs  admin_purge_post.rs  admin_purge_user.rs  leave_admin.rs  list_banned_persons.rs  mod.rs
crates/api/src/board/: add_mod.rs  ban.rs  block.rs  hide.rs  invite_mod.rs  list_mods.rs  mod.rs  read.rs  subscribe.rs
crates/api/src/comment/: like.rs  list.rs  mod.rs  save.rs  vote.rs
crates/api/src/comment_report/: create.rs  list.rs  resolve.rs
crates/api/src/helpers/: flair.rs  mod.rs  notifications.rs  validation.rs
crates/api/src/loaders/: board_data_loaders.rs  comment_data_loaders.rs  creator_loader.rs  post_data_loaders.rs
crates/api/src/local_user/: get_settings.rs  login.rs  mod.rs  profile.rs  read.rs  save_settings.rs  search_usernames.rs  verify_email.rs
crates/api/src/media/: upload.rs
crates/api/src/moderator/: mod.rs  mod_add_admin.rs  mod_add_board_mod.rs  mod_ban_from_board.rs  mod_ban_person.rs  mod_ban_user.rs  mod_lock_object.rs  mod_lock_post.rs  mod_queue_comments.rs  mod_queue_posts.rs  mod_remove_board.rs  mod_remove_comment.rs  mod_remove_object.rs  mod_remove_post.rs  mod_sticky_post.rs
crates/api/src/mutations/: auth.rs  board_moderation.rs  emoji.rs  file_upload.rs  flair_categories.rs  mod.rs  moderation_unified.rs  notifications.rs  reactions.rs  reports.rs
crates/api/src/post/: feature.rs  like.rs  list.rs  lock.rs  mod.rs  save.rs  vote.rs
crates/api/src/post_report/: create.rs  list.rs  resolve.rs
crates/api/src/queries/: banned_users.rs  board_management.rs  board_moderators.rs  boards.rs  comments.rs  emojis.rs  flairs.rs  invites.rs  me.rs  messages.rs  mod.rs  notifications.rs  posts.rs  registration_applications.rs  reports.rs  search.rs  site.rs  streams.rs  user.rs
crates/api/src/site/: federated_instances.rs  feed.rs  get_members.rs  get_site_settings.rs  mod.rs  mod_log.rs  password_reset.rs  password_reset_request.rs  save_site_settings.rs  search.rs  send_invite.rs  upload_file.rs  validate_invite.rs
crates/api/src/storage/: mod.rs
crates/api/src/structs/: board_mods.rs  boards.rs  comment.rs  emoji.rs  flair.rs  message.rs  mod.rs  post.rs  reaction.rs  site.rs  stream.rs  user.rs
crates/api/src/user/: get_settings.rs  list_mentions.rs  login.rs  mod.rs  profile.rs  save_settings.rs  search_usernames.rs  verify_email.rs
crates/api/src/utils/: admin_checks.rs  auth.rs  emoji.rs  files.rs  mod.rs  request.rs  site_metadata.rs  url_builder.rs  validation.rs
crates/api_common/: Cargo.toml
crates/api_common/src/: admin.rs  applications.rs  board.rs  build_response.rs  comment.rs  data.rs  download_yt_audio.rs  emoji.rs  lib.rs  message.rs  moderator.rs  person.rs  post.rs  private_messages.rs  request.rs  sensitive.rs  site.rs  user.rs  utils.rs
crates/api_common/src/websocket/: send.rs
crates/api_crud/: Cargo.toml
crates/api_crud/src/: lib.rs
crates/api_crud/src/applications/: list.rs
crates/api_crud/src/board/: create.rs  delete.rs  mod.rs  remove.rs  update.rs  update_banned.rs
crates/api_crud/src/board_mods/: create.rs  delete.rs  invite.rs  list.rs  mod.rs  update.rs
crates/api_graphql/: Cargo.toml
crates/api_graphql/src/: apub_helpers.rs  lib.rs  newtypes.rs  queries.rs
crates/api_media/: Cargo.toml
crates/apub/: Cargo.toml
crates/apub/src/: activity_lists.rs  lib.rs  mentions.rs
crates/db/: Cargo.toml
crates/db/src/: database.rs  lib.rs  newtypes.rs  porpl_types.rs  schema.rs  schema.rs.bak  traits.rs  utils.rs
crates/db_views/: Cargo.toml
crates/db_views/src/: actor_structs.rs  board_moderator_view.rs  board_person_ban_view.rs  board_subscriber_view.rs  board_user_ban_view.rs  board_view.rs  comment_mod_queue_view.rs  comment_reply_view.rs  comment_report_view.rs  comment_view.rs  emoji_view.rs  lib.rs  local_structs.rs  local_user_view.rs  message_view.rs  person_mention_view.rs  person_view.rs  post_mod_queue_view.rs  post_report_view.rs  post_view.rs  private_message_view.rs  registration_application_view.rs  site_invite_view.rs  site_view.rs  structs.rs  user_mention_view.rs  user_view.rs
crates/db_views_mod/: Cargo.toml
crates/db_views_mod/src/: admin_purge_board_view.rs  admin_purge_comment.rs  admin_purge_comment_view.rs  admin_purge_person_view.rs  admin_purge_post_view.rs  admin_purge_user_view.rs  lib.rs  mod_add_admin_view.rs  mod_add_board_mod_view.rs  mod_add_board_view.rs  mod_add_view.rs  mod_ban_from_board_view.rs  mod_feature_post_view.rs  mod_lock_post_view.rs  mod_remove_board_view.rs  mod_remove_comment_view.rs  mod_remove_post_view.rs  mod_sticky_post_view.rs  structs.rs
crates/routes/: Cargo.toml
crates/routes/src/: feeds.rs  lib.rs  media.rs  nodeinfo.rs  webfinger.rs
crates/server/: Cargo.toml
crates/server/src/: api_routes.rs  main.rs
crates/utils/: Cargo.toml
crates/utils/src/: claims.rs  content_filter.rs  email.rs  error.rs  keypair.rs  lib.rs  parser.rs  passhash.rs  time.rs  utils.rs  version.rs
(+1608 files in other folders)
