[package]
name = "tinyboards_server"
version = "0.1.0"
edition = "2021"
description = "The backend server for TinyBoards!"
license  = "AGPL-3.0"

[lib]
doctest = false

[profile.dev]
debug = 0

[features]
console = ["console-subscriber", "opentelemetry", "opentelemetry-otlp", "tracing-opentelemetry",
    "reqwest-tracing/opentelemetry_0_16"]

[workspace]
members = [
    "crates/api",
    "crates/api_common",
    "crates/api_crud",
    "crates/utils",
    "crates/db",
    "crates/db_views",
    "crates/db_views_mod",
]

[workspace.dependencies]
tinyboards_api = { version = "=0.1.0", path="./crates/api" }
tinyboards_api_common = { version = "=0.1.0", path="./crates/api_common" }
tinyboards_api_crud = { version = "=0.1.0", path="./crates/api_crud" }
tinyboards_utils = { version = "=0.1.0", path="./crates/utils" }
tinyboards_db = { version = "=0.1.0", path="./crates/db" }
tinyboards_db_views = { version = "=0.1.0", path="./crates/db_views" }
tinyboards_db_views_mod = { version = "=0.1.0", path="./crates/db_views_mod" }
base64 = "0.21.0"
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "serde_json", "chrono"] }
diesel-async = "0.1.1"
diesel_migrations = "2.0.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = { version = "1.0.91", features = ["preserve_order"] }
actix-web = { version = "4.2.1", default-features = false, features = ["macros", "rustls"] }
tracing = "0.1.37"
tracing-actix-web = "0.7.2"
tracing-log = "0.1.3"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
url = { version = "2.3.1", features = ["serde"] }
reqwest = { version = "0.11.12", features = ["json", "stream"] }
reqwest-middleware = "0.2.0"
reqwest-tracing = "0.4.0"
clokwerk = "0.3.5"
doku = { version = "0.20.0", features = ["url-2"] }
parking_lot = "0.12.1"
reqwest-retry = "0.2.0"
bcrypt = "0.13.0"
chrono = { version = "0.4.23", features = ["serde"], default-features = false }
uuid = "1.3.0"
async-trait = "0.1.58"
anyhow = "1.0.68"
typed-builder = "0.12.0"
tokio = "1.25.0"
sha2 = "0.10.6"
regex = "1.7.1"
once_cell = "1.17.0"
strum = "0.24.1"
strum_macros = "0.24.3"
itertools = "0.10.5"
futures = "0.3.26"
http = "0.2.8"
actix-rt = { version = "2.8.0", default-features = false }
percent-encoding = "2.2.0"
rand = "0.8.5"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
tracing-opentelemetry = { version = "0.18.0" }
actix-ws = "0.2.5"
actix = "0.13.0"
bigdecimal = "0.3.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
env_logger = "0.10.0"
jwt = "0.16.0"
hmac = "0.12.1"
encoding = "0.2.33"
r2d2 = "0.8.10"
dotenvy = "0.15"
markdown = "0.3.0"
derive_more = "0.99.17"
rust-argon2 = "1.0.0"
temp-env = "0.3.1"
comrak = { version = "0.14.0", default-features = false }
openssl = "0.10.45"
lettre = "0.10.2"
deser-hjson = "1.1.0"
smart-default = "0.6.0"
html2text = "0.4.5"
jsonwebtoken = "8.2.0"
bb8 = "0.8.0"
actix-files = "0.6.2"
actix-multipart = "0.6"

[dependencies]
tinyboards_api = { workspace = true }
tinyboards_api_crud = { workspace = true }
tinyboards_api_common = { workspace = true }
tinyboards_db = { workspace = true }
tinyboards_db_views = { workspace = true }
tinyboards_db_views_mod = { workspace = true }
tinyboards_utils = { workspace = true }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
diesel-async = { workspace = true }
serde = { workspace = true }
actix-web = { workspace = true }
dotenv  = { workspace = true }
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
tracing-error = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-tracing = { workspace = true }
clokwerk = { workspace = true }
doku = { workspace = true }
parking_lot = { workspace = true }
reqwest-retry = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
actix-ws = { workspace = true }
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
rand = { workspace = true }
console-subscriber = { version = "0.1.8", optional = true }
opentelemetry-otlp = { version = "0.11.0", optional = true }
pict-rs = { version = "0.4.0-beta.15", optional = true }
tokio.workspace = true