[package]
name = "ap_federation"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
openssl = { workspace = true }
once_cell = { workspace = true }
http = { workspace = true }
sha2 = { workspace = true }
background-jobs = { workspace = true }
thiserror = { workspace = true }
derive_builder = { workspace = true }
itertools = { workspace = true }
dyn-clone = { workspace = true }
enum_delegate = { workspace = true }
httpdate = { workspace = true }
http-signature-normalization-reqwest = { workspace = true }
http-signature-normalization = { workspace = true }
bytes = { workspace = true }
futures-core = { workspace = true }
pin-project-lite = { workspace = true }
activitystreams-kinds = { workspace = true }
regex = { workspace = true }
actix-web = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }
displaydoc = { workspace = true }

[features]
default = ["actix-web", "axum"]
actix-web = ["dep:actix-web"]
axum = ["dep:axum", "dep:tower", "dep:hyper"]

[dev-dependencies]
rand = "0.8.5"
env_logger = "0.10.0"
tower-http = { version = "0.4.0", features = ["map-request-body", "util"] }
axum = { version = "0.6.12", features = ["http1", "tokio", "query"], default-features = false }
axum-macros = "0.3.7"
actix-rt = "2.8.0"

[profile.dev]
strip = "symbols"
debug = 0
