[package]
name = "tinyboards_api"
version = "0.1.0"
edition = "2021"

[lib]
name = "tinyboards_api"
path = "src/lib.rs"
doctest = false

[dependencies]
tinyboards_utils = { version = "0.1.0", path = "../utils" }
tinyboards_api_common = { version = "0.1.0", path = "../api_common" }
tinyboards_db = { version = "0.1.0", path = "../db" }
tinyboards_db_views = { version = "0.1.0", path = "../db_views" }
tinyboards_db_views_mod = { version = "0.1.0", path = "../db_views_mod" }
actix-web = "4"
async-trait = "0.1.57"
diesel = { version = "2.0.0", features = ["postgres"] }
serde = { version = "1.0.145", features = ["derive"] }
derive_more = "0.99.17"
bigdecimal = "0.3.0"
regex = "1"
bcrypt = "0.13.0"
tracing = "0.1.36"
url = { version = "2.3.1", features = ["serde"] }