[package]
name = "tinyboards_api"
version = "0.1.0"
edition = "2021"

[lib]
name = "tinyboards_api"
path = "src/lib.rs"
doctest = false

[dependencies]
tinyboards_utils = { workspace = true }
tinyboards_api_common = { workspace = true }
tinyboards_db = { workspace = true }
tinyboards_db_views = { workspace = true }
tinyboards_db_views_mod = { workspace = true }
actix-web = { workspace = true }
actix-files = { workspace = true }
actix-multipart = { workspace = true }
async-trait = { workspace = true }
diesel = { workspace = true }
serde = { workspace = true }
bigdecimal = { workspace = true }
regex = { workspace = true }
bcrypt = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
image = { workspace = true }
