[package]
name = "tinyboards_api"
version = "0.1.0"
edition = "2021"

[lib]
name = "tinyboards_api"
path = "src/lib.rs"
doctest = false

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true }
actix-web = { workspace = true }
async-graphql-actix-web = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
tinyboards_db = { workspace = true }
tinyboards_utils = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
jsonwebtoken = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
encoding = { workspace = true }
reqwest-middleware = { workspace = true }
webpage = { version = "1.6.0", default-features = false, features = ["serde"] }
image = { workspace = true }
actix-files = { workspace = true }
lazy_static = "1.4.0"
