[package]
name = "tinyboards_api_common"
version = "0.1.0"
edition = "2021"

[lib]
name = "tinyboards_api_common"
path = "src/lib.rs"
doctest = false

[dependencies]
tinyboards_db = { workspace = true }
tinyboards_db_views = { workspace = true }
tinyboards_db_views_mod = { workspace = true }
tinyboards_utils = { workspace = true }
async-trait = { workspace = true }
jwt = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
url = { workspace = true }
actix-web = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true }
tracing = { workspace = true }
percent-encoding = { workspace = true }
encoding = { workspace = true }
reqwest-middleware = { workspace = true }
webpage = { version = "1.4.0", default-features = false, features = ["serde"] }
reqwest = { workspace = true }
base64 = { workspace = true }
hmac = { workspace = true }
anyhow = { workspace = true }
serde_with = { workspace = true }

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde"
]

[dev-dependencies]
actix-rt = { version = "2.7.0", default-features = false }
