[package]
name = "tinyboards_api_crud"
version = "0.1.0"
edition = "2021"

[dependencies]
tinyboards_utils = { workspace = true }
tinyboards_db = { workspace = true }
tinyboards_db_views = { workspace = true }
tinyboards_api = { workspace = true }
tinyboards_api_common = { workspace = true }
tinyboards_ap_federation = { workspace = true }
bcrypt = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
actix-web = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }