[package]
name = "tinyboards_api_graphql"
version = "0.1.0"
edition = "2021"

[lib]
name = "tinyboards_api_graphql"
path = "src/lib.rs"
doctest = false

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true }
actix-web = { workspace = true }
async-graphql-actix-web = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
tinyboards_db = { workspace = true }
# tinyboards_db_views = { workspace = true }
tinyboards_utils = { workspace = true }
regex = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
#tinyboards_federation = { workspace = true }
#tinyboards_api_common = { workspace = true }
