[package]
name = "tinyboards_api_media"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { workspace = true }
actix-files = { workspace = true }
actix-multipart = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }