[package]
name = "tinyboards_apub"
version = "0.1.0"
edition = "2021"

[dependencies]
tinyboards_federation = { workspace = true }
tinyboards_db = { workspace = true }
tinyboards_db_views = { workspace = true }
tinyboards_db_views_mod = { workspace = true }
tinyboards_api_common = { workspace = true }
tinyboards_utils = { workspace = true }
diesel = { workspace = true }
chrono = { workspace = true } 
serde_json = { workspace = true }
serde = { workspace = true }
actix-web = { workspace = true }
actix-rt = { workspace = true }
tracing = { workspace = true }
strum_macros = { workspace = true }
url = { workspace = true }
http = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
once_cell = { workspace = true }
html2md = "0.2.13"
serde_with = { workspace = true }
http-signature-normalization-actix = { version = "0.6.1", default-features = false, features = ["server", "sha-2"] }
enum_delegate = "0.2.0"