[package]
name = "porpl_db"
version = "0.1.0"
edition = "2021"

[dependencies]
porpl_utils = { version = "0.1.0", path = "../utils" }
chrono = { version = "0.4.22", features = ["serde"], default-features = false }
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "serde_json", "chrono"] }
diesel_migrations = { version = "2.0.0" }
diesel-derive-newtype = { version = "1.0.0" }
diesel_ltree = "0.3.0"
r2d2 = "0.8.10"
dotenvy = "0.15"
serde = { version = "1.0.145", features = ["derive"] }
bigdecimal = "0.3.0"
url = { version = "2.3.1", features = ["serde"] }
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = { version = "0.10.6" }
regex = { version = "1.6.0" }