[package]
name = "tinyboards_db"
version = "0.1.0"
edition = "2021"

[dependencies]
tinyboards_utils = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true, features = ["postgres", "bb8"] }
diesel_migrations = { workspace = true }
r2d2 = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
bigdecimal = { workspace = true }
url = { workspace = true }
jwt = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
async-trait = { workspace = true }
actix-web = { workspace = true }