[package]
name = "tinyboards_db"
version = "0.1.0"
edition = "2021"

[dependencies]
tinyboards_utils = { workspace = true }
tinyboards_federation = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true, features = ["64-column-tables"] }
diesel-async = { workspace = true, features = ["postgres", "bb8"] }
diesel_migrations = { workspace = true }
diesel-derive-newtype = { workspace = true }
r2d2 = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
bigdecimal = { workspace = true }
url = { workspace = true }
jwt = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
async-trait = { workspace = true }
actix-web = { workspace = true }
tracing = { workspace = true }
bb8 = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
tokio = { workspace = true }
typed-builder = { workspace = true }