[package]
name = "tinyboards_db_views"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
tinyboards_db = { path = "../db" }
diesel = { version = "2.0.0", features = ["postgres","chrono","r2d2","serde_json"] }
serde = { version = "1.0.145", features = ["derive"] }
tracing = "0.1.36"
diesel_ltree = "0.3.0"
typed-builder = "0.10.0"

[dev-dependencies]
serial_test = "0.9.0"