[package]
name = "tinyboards_db_views"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
tinyboards_db = { workspace = true }
tinyboards_utils = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
typed-builder = { workspace = true }
jwt = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
serial_test = "0.9.0"