[package]
name = "tinyboards_db_views_mod"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
tinyboards_db = { workspace = true }
diesel = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
typed-builder = { workspace = true }

[dev-dependencies]
serial_test = "0.9.0"