[package]
name = "tinyboards_routes"
version = "0.1.0"
edition = "2021"

[dependencies]
tinyboards_utils = { workspace = true }
# tinyboards_db_views = { workspace = true }
tinyboards_db = { workspace = true }
tinyboards_api_graphql = { workspace = true }
#tinyboards_federation = { workspace = true }
actix-web = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
reqwest-middleware = { workspace = true }
serde = { workspace = true }
url = { workspace = true }
strum = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
rss = "2.0.4"
