[package]
name = "porpl-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
porpl_db = { version = "0.1.0", path = "../db" }
porpl_api = { version = "0.1.0", path = "../api" }
porpl_utils = { version = "0.1.0", path = "../utils" }
actix-web = "4"
serde = "1.0.145"
bigdecimal = "0.3.0"
dotenv = "0.15.0"
