[package]
name = "porpl_utils"
version = "0.1.0"
edition = "2021"

[lib]
name = "porpl_utils"
path = "src/lib.rs"
doctest = false

[dependencies]
actix-web = { version = "4.2.1", features = ["rustls"], default-features = false }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = { version = "1.0.85", features = ["preserve_order"] }
derive_more = "0.99.17"
rust-argon2 = "1.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
chrono = "0.4.22"
temp-env = "0.3.0"
regex = "1.6.0"
tracing = "0.1.36"
tracing-error = "0.2.0"
rand = "0.8.5"
comrak = { version = "0.14.0", default-features = false }
once_cell = "1.15.0"
openssl = "0.10.41"
url = { version = "2.3.1", features = ["serde"] }
lettre = "0.10.1"
anyhow = "1.0.65"
reqwest-middleware = "0.1.6"
strum = "0.24.1"
strum_macros = "0.24.3"
futures = "0.3.24"
diesel = { version = "2.0.0", features = ["chrono"] }
http = "0.2.8"
deser-hjson = "1.0.2"
smart-default = "0.6.0"
jsonwebtoken = "8.1.1"
doku = { version = "0.12.0", features = ["url-2"] }
html2text = "0.4.2"
rosetta-i18n = "0.1.2"
parking_lot = "0.12.1"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde"
]