[package]
name = "tinyboards_utils"
version = "0.1.0"
edition = "2021"

[lib]
name = "tinyboards_utils"
path = "src/lib.rs"
doctest = false

[dependencies]
markdown = { workspace = true }
actix-web = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
derive_more = { workspace = true }
rust-argon2 = { workspace = true }
dotenv = { workspace = true }
dotenv_codegen = { workspace = true }
chrono = { workspace = true }
temp-env = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
rand = { workspace = true }
comrak = { workspace = true }
once_cell = { workspace = true }
openssl = { workspace = true }
url = { workspace = true }
lettre = { workspace = true }
anyhow = { workspace = true }
reqwest-middleware = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
futures = { workspace = true }
diesel = { workspace = true }
http = { workspace = true }
deser-hjson = { workspace = true }
smart-default = { workspace = true }
jsonwebtoken = { workspace = true }
doku = { workspace = true }
html2text = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
typed-builder = { workspace = true }
itertools = { workspace = true }

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde"
]